<resources>
    <string name="app_name">Deen</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="oboarding_next">Next</string>
    <string name="onboarding_arabic_lang">العربية</string>
    <string name="oboarding_bangla_lang">বাংলা</string>
    <string name="oboarding_location_txt">Location: Off</string>
    <string name="onboarding_location_hint">Turn on location to get accurate information</string>
    <string name="onboarding_location_titile">Location</string>
    <string name="onboarding_language_title">Language (ভাষা)</string>
    <string name="onboarding_language_select_hint">Select preferred language</string>
    <string name="english">English</string>
    <string name="bangla">বাংলা</string>
    <string name="arabic">العربية</string>
    <string name="select_location_option_name_onboarding">Select location</string>
    <string name="favorite_features_title">Favorite Features</string>
    <string name="onboarding_fav_menu_hint">Choose the favorite feature</string>
    <string name="login_welcome_txt">Welcome to \n<b>Deen Islam</b></string>
    <string name="mobile_number">Mobile number</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="remember">Remember</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_an_account">Create an account</string>
    <string name="privacy_policy_txt_login"><![CDATA[T&C • Privacy policy]]></string>
    <string name="assalamu_alaikum">Assalamu Alaikum</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="ok_cap">OK</string>
    <string name="default_image">default_image</string>
    <string name="enter_country_name">Enter country name</string>
    <string name="more">More</string>
    <string name="prayer_times">Prayer Times</string>
    <string name="nearest_mosque">Nearest Mosque</string>
    <string name="daily_dua">Daily Dua</string>
    <string name="digital_tasbeeh">Digital Tasbeeh</string>
    <string name="qibla_compass">Qibla Compass</string>
    <string name="islamic_name">Islamic Name</string>
    <string name="al_quran">Al Quran</string>
    <string name="home">Home</string>
    <string name="oops_no_internet">Oops! No Internet</string>
    <string name="no_internet_warning">Check your WiFi connection or Mobile data and try again.</string>
    <string name="try_again">Try again</string>
    <string name="sura">Sura</string>
    <string name="juz">Juz</string>
    <string name="my_quran">My Quran</string>
    <string name="continue_reading">Continue reading</string>
    <string name="empty_place">Empty place</string>
    <string name="no_data_msg">There is no content, content will be add here, Insha\'Allah</string>
    <string name="download">Download</string>
    <string name="snooze">Snooze</string>
    <string name="search">Search</string>
    <string name="count1">01</string>
    <string name="count2">02</string>
    <string name="count3">03</string>
    <string name="count4">04</string>
    <string name="count5">05</string>
    <string name="count6">06</string>
    <string name="count7">07</string>
    <string name="zakat_calculator_nisab_step1">Enter the Value of Nisab in your local currency. According to Sharia Law, Nisab is the minimum amount a person possesses for over a year in order to be obliged to pay Zakah. You can calculate nisab in terms of either Gold or Silver value. For Silver, the standard nisab is 21 ounces of silver (612.36 grams) or its equivalent in cash. For Gold, the standard nisab is 3 ounces of gold (87.48 grams) or its cash equivalent. (Note: check the value of gold and silver in your local currency)</string>
    <string name="zakat_calculator_nisab_step2">In the next step, add the quantity of Gold and silver that you have possessed for more then a year and its price per 10 gram in your local currency. Each type (in Carats) of Gold you possess must be added separately as their values are different.</string>
    <string name="zakat_calculator_nisab_step3">In this step, add the values of Cash, Properties and stocks in your possession for more then a year as Zakat is applicable on them as well.</string>
    <string name="zakat_calculator_nisab_step4">In this final step, you need to add your debts and liabilities, the payments that are due on you and debts that you have to give. These amounts are subtracted from your assets/possessions in the final calculation to determine the Zakah obligatory on you.</string>
    <string name="zakat_calculator_nisab_step5">After completion of the steps above, a summary appears which tells you whether you are eligible to pay Zakat and, if you are, the zakat that you have to pay appears. The payable zakat is 2.5% of your overall possessions. You will also have the option to Save the summary to keep a record.</string>
    <string name="zakah_home_faq1_title">What is Zakat?</string>
    <string name="zakah_home_faq1_content"></string>
    <string name="zakah_home_faq2_title">What is Nisab?</string>
    <string name="zakah_home_faq2_content"></string>
    <string name="zakah_home_faq3_title">What are the conditions for Zakat?</string>
    <string name="zakah_home_faq3_content"></string>
    <string name="zakah_home_faq4_title">Zakat distribution sector</string>
    <string name="zakah_home_faq4_content"></string>
    <string name="languageTxt">Language</string>
    <string name="setting_language_txt">English</string>
    <string name="billboard_have_you_prayed">Have you prayed %1$s?</string>
    <string name="it_s_time_for">It\'s time for</string>
    <string name="billboard_next_prayer">Next prayer: %1$s</string>
    <string name="billboard_all_prayers">All Prayers</string>
    <string name="hadith">Hadith</string>
    <string name="categories">Categories</string>
    <string name="favorite">Favorite</string>
    <string name="all_dua">All Dua</string>
    <string name="today_s">Today\'s</string>
    <string name="zakat">Zakat</string>
    <string name="saved">Saved</string>
    <string name="learn_about_zakat">Learn about Zakat</string>
    <string name="new_calculation">New Calculation</string>
    <string name="total_assets">Total assets</string>
    <string name="zakat_payable">Zakat Payable</string>
    <string name="pay_zakat">Pay Zakat</string>
    <string name="nisab">Nisab</string>
    <string name="property">Property</string>
    <string name="liabilities">Liabilities</string>
    <string name="summery">Summery</string>
    <string name="choose_nisab">Choose Nisab</string>
    <string name="gold">Gold</string>
    <string name="silver">Silver</string>
    <string name="bangladeshi_taka_bdt">Bangladeshi Taka (BDT)</string>
    <string name="how_much_is_nisab_for_zakat_2023">How much is Nisab for Zakat 2023</string>
    <string name="silver_the_value_of_612_36g_of_silver">Silver – the value of 612.36g of silver</string>
    <string name="gold_the_value_of_87_48g_of_gold">Gold – the value of 87.48g of gold</string>
    <string name="how_to_calculate_zakat">How to calculate Zakat</string>
    <string name="start_calculation">Start Calculation</string>
    <string name="enter_the_amount_of_all_your_possessions_during_the_lunar_year">Enter the amount of all your possessions during the lunar year:</string>
    <string name="calculate">Calculate</string>
    <string name="debts_amp_liabilities"><![CDATA[Debts & Liabilities]]></string>
    <string name="payable_zakat_2_5">Payable Zakat (2.5%)</string>
    <string name="save_the_calculation">Save the Calculation</string>
    <string name="donate_zakat">Donate Zakat</string>
    <string name="target">TARGET</string>
    <string name="tasbeeh_today_s">TODAY\'S:</string>
    <string name="tasbeeh_total">TOTAL:</string>
    <string name="none">None</string>
    <string name="recent_counts">Recent counts</string>
    <string name="no_recent_count_available">No recent count available</string>
    <string name="the_distance_from_kaaba_is_unknown">The distance from Kaaba is unknown</string>
    <string name="calibrate_your_phone">Calibrate your phone</string>
    <string name="tilt_and_move_your_phone_3_times_like_this">Tilt and move your phone 3 times like this:</string>
    <string name="compass_accuracy">Compass accuracy:</string>
    <string name="done">Done</string>
    <string name="location">Location</string>
    <string name="recently_read">Recently Read</string>
    <string name="popular_sura">Widely used surah</string>
    <string name="quran_popular_surah_ayat">%1$s %2$s Ayahs</string>
    <string name="quran_para_adapter_title">Juz (Para) %1$s</string>
    <string name="ruku">Ruku: --</string>
    <string name="theme">Theme</string>
    <string name="audio">Audio</string>
    <string name="translation">Translation</string>
    <string name="auto_scroll">Auto Scroll</string>
    <string name="auto_play_next">Auto Play Next</string>
    <string name="recitation">Recitation</string>
    <string name="abdulbaset_abdulsamad">AbdulBaset AbdulSamad</string>
    <string name="font_size">Font Size</string>
    <string name="font__a">A-</string>
    <string name="font_a">A+</string>
    <string name="arabic_font">Arabic Font</string>
    <string name="transliteration">Transliteration</string>
    <string name="translation_font_size">Translation Font Size</string>
    <string name="default_txt">Default</string>
    <string name="translation_by">Translation by</string>
    <string name="translation_language">Translation Language</string>
    <string name="monthly_calendar">Monthly Calendar</string>
    <string name="uthmanic_script_hafs_regular">Uthmanic Script HAFS Regular</string>
    <string name="select_surah">Select Surah</string>
    <string name="select_juz_para">Select Juz (Para)</string>
    <string name="search_surah">Search surah</string>
    <string name="other_prayers">Other Prayers</string>
    <string name="forbidden_time">Forbidden Time</string>
    <string name="prayer_calendar">Prayer Calendar</string>
    <string name="islamic_foundation_bangladesh">Islamic Foundation Bangladesh</string>
    <string name="location_dhaka">Location: Dhaka</string>
    <string name="prayer_calendar_date">Calendar of %1$s</string>
    <string name="date">DATE</string>
    <string name="fajr">FAJR</string>
    <string name="want_to_delete">Want to delete?</string>
    <string name="suhoor">Suhoor</string>
    <string name="iftaar">Iftaar</string>
    <string name="do_you_want_to_delete_the_count">Do you want to delete the count?</string>
    <string name="total">Total</string>
    <string name="okay">Ok</string>
    <string name="alhamdulillah">Alhamdulillah!</string>
    <string name="you_have_successfully_signed_in">You have successfully signed in</string>
    <string name="day">day</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="warning">Caution</string>
    <string name="bangla_translator">Bangla Translator</string>
    <string name="english_translator">English Translator</string>
    <string name="quaran_caution_content">The pronunciation of Arabic in Bengali can be difficult because some Arabic letters are not pronounced in the language. Users are encouraged to avoid Bengali pronunciation whenever feasible. However, for those wishing to recite Arabic, it is recommended to first listen to an Arabic recitation and then attempt to pronounce it in alignment with the recitation. By adopting this method, you can avoid most issues, In Sha Allah!\n\nWe are constantly working on the development of our app and Islamic content. Your feedback is crucial in helping us identify and rectify any errors promptly. Stay with Deen on the path of Islamic living. </string>
</resources>