<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    tools:viewBindingIgnore="true"
    android:orientation="vertical">

    <!-- Header for days of the week -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/space_8"
        android:paddingBottom="@dimen/space_8"
        android:paddingStart="@dimen/space_8"
        android:paddingEnd="@dimen/space_8"
        android:elevation="1dp"
        android:orientation="horizontal"
        android:background="@color/deen_brand_ultra_light"
        android:weightSum="7">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sun"
            android:textAllCaps="true"
            android:textColor="@color/deen_txt_black_deep"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:gravity="center" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mon"
            android:textAllCaps="true"
            android:textColor="@color/deen_txt_black_deep"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:gravity="center" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tue"
            android:textAllCaps="true"
            android:textColor="@color/deen_txt_black_deep"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:gravity="center" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wed"
            android:textAllCaps="true"
            android:textColor="@color/deen_txt_black_deep"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:gravity="center" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/thu"
            android:textAllCaps="true"
            android:textColor="@color/deen_txt_black_deep"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:gravity="center" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fri"
            android:textColor="@color/deen_brand_error"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textAllCaps="true"
            android:gravity="center" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sat"
            android:textAllCaps="true"
            android:textColor="@color/deen_txt_black_deep"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:gravity="center" />
    </LinearLayout>


    <!-- Existing GridView for the calendar -->
    <com.deenislamic.sdk.service.libs.calendar.NonScrollableGridView
        android:id="@+id/calendarGrid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:clipToPadding="false"
        android:padding="@dimen/space_10"
        android:numColumns="7"
        android:verticalSpacing="8dp"
        android:horizontalSpacing="3dp"/>
</LinearLayout>
