<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/greeting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_16"
        android:layout_marginStart="@dimen/space_24"
        android:layout_marginEnd="@dimen/space_24"
        android:text="@string/want_to_delete"
        android:gravity="center"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.font20"
        android:textColor="@color/txt_black_deep"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>



    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/space_24"
        android:layout_marginStart="@dimen/space_24"
        android:layout_marginTop="@dimen/space_4"
        android:gravity="center"
        android:text="@string/do_you_want_to_delete_the_count"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/txt_ash"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greeting"  />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/totalBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/space_4"
        android:layout_marginStart="@dimen/space_16"
        android:paddingTop="@dimen/space_9.5"
        android:paddingBottom="@dimen/space_9.5"
        android:layout_marginTop="@dimen/space_27"
        android:text="@string/total"
        style="@style/MaterialButtonStyle"
        app:backgroundTint="@color/white"
        app:strokeColor="@color/border"
        app:strokeWidth="1dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/txt_ash"
        app:cornerRadius="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/todayBtn"
        app:layout_constraintTop_toBottomOf="@+id/hint"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/todayBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_4"
        android:layout_marginEnd="@dimen/space_16"
        android:paddingTop="@dimen/space_9.5"
        android:paddingBottom="@dimen/space_9.5"
        android:layout_marginTop="@dimen/space_27"
        android:text="@string/today_s"
        style="@style/MaterialButtonStyle"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/white"
        app:cornerRadius="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/totalBtn"
        app:layout_constraintTop_toBottomOf="@+id/hint"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/totalBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>