<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:paddingStart="@dimen/space_16"
    android:paddingTop="@dimen/space_16"
    android:paddingEnd="@dimen/space_16"
    tools:viewBindingIgnore="true"
    android:background="@android:color/white"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="9">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/pageTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search"
                android:textColor="@color/deen_txt_black_deep"
                android:layout_gravity="center_vertical"
                android:textAppearance="@style/DeenTextAppearance.font20"
                android:textStyle="bold"
                />

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/closeBtn"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:background="@null"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:src="@drawable/baseline_close_24"
                android:contentDescription="@string/default_image" />


        </FrameLayout>



    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/translationByTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_16"
        android:text="@string/bangla_translator"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/deen_txt_ash"
        app:layout_constraintTop_toBottomOf="@+id/transliterationLy"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/banglaTranList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_4"
        android:paddingBottom="@dimen/space_16"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_muezzin"
        app:layout_constraintTop_toBottomOf="@+id/translationByTxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/translationByTxt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_16"
        android:text="@string/english_translator"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/deen_txt_ash"
        app:layout_constraintTop_toBottomOf="@+id/banglaTranList"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/englishTranList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_4"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_muezzin"
        app:layout_constraintTop_toBottomOf="@+id/translationByTxt1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</LinearLayout>
