<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    tools:viewBindingIgnore="true"
    android:paddingTop="@dimen/space_8">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:paddingStart="@dimen/space_8"
            android:paddingEnd="@dimen/space_8"
            app:textAllCaps="true"
            android:textStyle="bold"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/deen_card_bg_deep_teal"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>


        <androidx.constraintlayout.widget.Guideline
            android:visibility="gone"
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.25" />

        <androidx.appcompat.widget.AppCompatTextView
            android:visibility="gone"
            android:id="@+id/day"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/day"
            app:textAllCaps="true"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@color/deen_txt_ash"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/date"
            app:layout_constraintStart_toEndOf="@+id/date" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.50" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/suhoor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:textAllCaps="true"
            android:text="@string/suhoor"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/deen_card_bg_deep_teal"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="@+id/date"
            app:layout_constraintStart_toEndOf="@+id/day" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.75" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/iftar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:textAllCaps="true"
            android:text="@string/iftaar"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/deen_card_bg_deep_teal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/date"
            app:layout_constraintStart_toEndOf="@+id/suhoor"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/space_12"
            android:background="@color/deen_border"
            app:layout_constraintTop_toBottomOf="@+id/date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>